kube/cluster-config/nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: nginx
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          name: nginx
        volumeMounts:
        - name: nginx-persistent-config-storage
          mountPath: /etc/nginx
        - name: nginx-persistent-log-storage
          mountPath: /var/log/nginx
      volumes:
      - name: nginx-persistent-config-storage
        persistentVolumeClaim:
          claimName: nginx-pv-config-claim
      - name: nginx-persistent-log-storage
        persistentVolumeClaim:
          claimName: nginx-pv-log-claim
