kube/cluster-config/sql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-sql
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: sql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-sql
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: sql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: sql
    spec:
      containers:
      - image: mariadb:latest 
        name: sql
        ports:
        - containerPort: 3306
          name: sql
        volumeMounts:
        - name: sql-persistent-storage
          mountPath: /var/lib/sql
      volumes:
      - name: sql-persistent-storage
        persistentVolumeClaim:
          claimName: sql-pv-claim
